# ghg-quant

./: README.md  hello.py  main.py  pyproject.toml  setup.py
data/raw/: epa_NJ_2023.csv  invalid_ghg_emissions.csv
scripts/: ingest_data.py
src/: __init__.py  config.py  generate_test_data.py  pipeline.py
src/analysis/: __init__.py  calculations.py  regional.py
src/data/: __init__.py  ingestion.py  validation.py
src/data/raw/: valid_ghg_emissions.csv
src/data/sources/: __init__.py  base.py  epa.py  queries.py  state.py
src/visualizations/: __init__.py  plots.py
tests/: test_ingestion.py  test_plots.py  test_validation.py
