[project]
name = "ghg-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "jupyterlab>=4.3.3",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.8.2",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
